// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component Should Render the component with ordered list of emails 1`] = `
<div>
  <div
    class="awesomemotive-settings-container-fluid"
  >
    <div
      class="awesomemotive-container-list"
    >
      <h2>
        Emails
      </h2>
    </div>
    <div
      class="awesomemotive-container-list"
    >
      <ul>
        <li>
          test@test.com
        </li>
        <li>
          emial@email.com
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table Component Should Render the default component with empty props 1`] = `
<div>
  <div
    class="awesomemotive-settings-container-fluid"
  >
    <div
      class="awesomemotive-container-list"
    >
      <h2>
        Emails
      </h2>
    </div>
    <div
      class="awesomemotive-container-list"
    />
  </div>
</div>
`;
